# ncp-aai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  EXAM_OBJECTIVES.md  PRD.md  PRODUCT.md  README.md  SPECS.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  skills-lock.json  tsconfig.json  vite.config.ts
.codex/agents/: ncp-aai-domain-study-material.toml  ncp-aai-researcher.toml
.lavish/: prd.html
docs/: RESEARCHER_TO_RAG.md  RUNNING.md
plan/: feature-agentic-study-platform-1.md
scripts/: dev_docker_run.sh
src/ncp_aai/: __init__.py  cli.py  config.py  db.py  main.py  models.py  objectives.py
src/ncp_aai/agents/: __init__.py  base.py  codex_bridge.py  codex_provider.py  local_stub.py
src/ncp_aai/ingestion/: __init__.py  chunking.py  normalize.py  readers.py  service.py
src/ncp_aai/jobs/: __init__.py  domain_generation.py  investigation.py  queue.py  suggested_readings.py
src/ncp_aai/rag/: __init__.py  embeddings.py  store.py
src/ncp_aai/synthesis/: __init__.py  citations.py  exercises.py  notes.py  quizzes.py
src/web/: App.test.tsx  App.tsx  styles.css
src/web/api/: client.ts
tests/: conftest.py  test_api.py  test_codex_quiz.py  test_ingestion_rag.py  test_investigation.py  test_objectives.py  test_suggested_readings.py
